--- a/SCHEDULE/SCHEDULE.html
+++ b/SCHEDULE/SCHEDULE.html
@@ -553,7 +553,7 @@
                     "Mold": MESM_Orders[od].moldID,
                     "Status": MESM_Orders[od].ScheduleStatus,
                     // "wcID": wcID,
-                    "Press": MESM_Orders[od].workcenterID,
+                    "Press": MESM_Orders[od].workcenterID == 0 ? '' : MESM_FloorMaps[MESM_Orders[od].workcenterID].unitName,
                 });
                 // MESM_FloorMaps[f]. MOLD_Machine_Matrix
             }
@@ -1215,6 +1215,37 @@
                                 end: moment.utc(event.end._d).format('MM/DD/YYYY HH:mm:ss')
                             };
                             cc(ScheduleEvents);
+                            for (var i = 0; i < orderTable.dataSet.length; i++) {
+                                if (orderTable.dataSet[i].OrderNumber == event.id) {
+                                    // cc(orderTable.dataSet[i].OrderID);
+                                    // cc(orderTable.dataSet[i].StartDate);
+                                    // cc(orderTable.dataSet[i].StartTime);
+                                    // cc(orderTable.dataSet[i].EndDate);
+                                    // cc(orderTable.dataSet[i].EndTime);
+                                    // cc(orderTable.dataSet[i].WCG);
+                                    // cc(orderTable.dataSet[i].Status);
+                                    // cc(orderTable.dataSet[i].Press);
+                                    // cc('====');
+                                    // cc(ScheduleEvents[event.id].resourceId);
+                                    // cc(ScheduleEvents[event.id].start);
+                                    // cc(ScheduleEvents[event.id].end);
+                                    // cc('//////');
+                                    orderTable.dataSet[i].StartDate = moment.utc(event.start._d).format('MMM DD, YYYY HH:mm:ss');
+                                    orderTable.dataSet[i].EndDate = moment.utc(event.end._d).format('MMM DD, YYYY HH:mm:ss');
+                                    orderTable.dataSet[i].StartTime = moment.utc(event.start._d).format('HH:mm:ss');
+                                    orderTable.dataSet[i].EndTime = moment.utc(event.end._d).format('HH:mm:ss');
+                                    orderTable.dataSet[i].WCG = ScheduleEvents[event.id].resourceId.split('_')[0];
+                                    orderTable.dataSet[i].Press = ScheduleEvents[event.id].resourceId.split('_')[1];
+                                    // cc(orderTable.dataSet[i].StartDate);
+                                    // cc(orderTable.dataSet[i].EndDate);
+                                    // cc(orderTable.dataSet[i].StartTime);
+                                    // cc(orderTable.dataSet[i].EndTime);
+                                    // cc(orderTable.dataSet[i].WCG);
+                                    // cc(orderTable.dataSet[i].Press);
+                                    break;
+                                }
+                            }
+                            orderTable.reload();
                         } else if (ScheduleEvents[event.id].resourceId != event.resourceId ||
                             ScheduleEvents[event.id].start != moment.utc(event.start._d).format('MM/DD/YYYY HH:mm:ss') ||
                             ScheduleEvents[event.id].end != moment.utc(event.end._d).format('MM/DD/YYYY HH:mm:ss')) {
@@ -1242,8 +1273,8 @@
                                     // cc(ScheduleEvents[event.id].start);
                                     // cc(ScheduleEvents[event.id].end);
                                     // cc('//////');
-                                    orderTable.dataSet[i].StartDate = moment.utc(event.start._d).format('MMM DD, YYYY');
-                                    orderTable.dataSet[i].EndDate = moment.utc(event.end._d).format('MMM DD, YYYY');
+                                    orderTable.dataSet[i].StartDate = moment.utc(event.start._d).format('MMM DD, YYYY HH:mm:ss');
+                                    orderTable.dataSet[i].EndDate = moment.utc(event.end._d).format('MMM DD, YYYY HH:mm:ss');
                                     orderTable.dataSet[i].StartTime = moment.utc(event.start._d).format('HH:mm:ss');
                                     orderTable.dataSet[i].EndTime = moment.utc(event.end._d).format('HH:mm:ss');
                                     orderTable.dataSet[i].WCG = ScheduleEvents[event.id].resourceId.split('_')[0];
@@ -1650,6 +1681,11 @@
                     // cc('_During ' + _During);
 
                     var mm = _During, hh = 0;
+
+                    if (mm < 240) {
+                        mm = 240
+                    }
+
                     hh = Math.floor(mm / 60);
                     mm = mm - 60 * hh;
                     if (hh > 24) {
@@ -1781,6 +1817,9 @@
                     // cc('_During ' + _During);
 
                     var mm = _During, hh = 0;
+                    if (mm < 240) {
+                        mm = 240
+                    }
                     hh = Math.floor(mm / 60);
                     mm = mm - 60 * hh;
                     if (hh > 24) {
@@ -2245,7 +2284,10 @@
                                                                         <div class="m-list-timeline__item">
                                                                             <span class="m-list-timeline__badge -m-list-timeline__badge--state-success"></span>
                                                                             <span class="m-list-timeline__text">
-																						12 new users registered
+																						13 new order received
+                                                                                <span class="m-badge m-badge--danger m-badge--wide">
+																							urgent
+																						</span>
 																					</span>
                                                                             <span class="m-list-timeline__time">
 																						Just now
@@ -2832,7 +2874,10 @@
                                                     <div class="m-list-timeline__item">
                                                         <span class="m-list-timeline__badge m-list-timeline__badge--success"></span>
                                                         <span class="m-list-timeline__text">
-																	12 new users registered
+																	13 new order received
+                                                            <span class="m-badge m-badge--danger m-badge--wide">
+																		urgent
+																	</span>
 																</span>
                                                         <span class="m-list-timeline__time">
 																	Just now
