--- a/SCHEDULE/SCHEDULE.irpt.html
+++ b/SCHEDULE/SCHEDULE.irpt.html
@@ -12,7 +12,7 @@
     </title>
 
     <script id="sap-ui-bootstrap"
-            src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+            src="/sapui5/resources/sap-ui-core.js"
             data-sap-ui-libs="sap.m"
             data-sap-ui-theme="sap_belize"
             data-sap-ui-xx-bindingSyntax="complex"
@@ -54,27 +54,21 @@
         var userRoles;
         var userRole;
         var userName;
-        var email1 = 'mark.andre@gmail.com';
-        var imgLoginUser = "assets/app/media/img/users/user1.jpg";
+
         // ScheduleEvents.hasOwnProperty('900000');
         // $(function () {
         function roleSecurity() {
+
+
             // arrayProperty();
-            userRoles = document.getElementById("user_roles");
-            userRole = document.getElementById("user_role");
-            userName = document.getElementById("user_name");
-            cc(userRoles);
-            cc(userRole);
-            cc(userName);
             cc(new Date(0).toISOString());
+
+            cc(document.getElementById("user_roles").value);
+            cc(document.getElementById("user_role").value);
+            cc(document.getElementById("user_name").value);
 
             orderTablePreparing();
 
-            $.each($(".imgLoginUser"), function (index, value) {
-                // value.src = '';
-            });
-
-            return;
 
             // var url = localHost ? 'MESM_Orders.xml' : '/XMII/Illuminator?QueryTemplate=OneHDMIIOwensboro/SCHEDULE/QUERIES/MESM_Orders_GET&Content-Type=text/xml';
             // cc(url);
@@ -422,7 +416,6 @@
                             "                            </div>\n" +
                             "                        </div>";
                     } else if (dir == 'in') {
-
                         tpl =
                             "                        <div class=\"m-messenger__message m-messenger__message--in\">\n" +
                             "                            <div class=\"m-messenger__message-pic\">\n" +
@@ -560,7 +553,7 @@
                     "Mold": MESM_Orders[od].moldID,
                     "Status": MESM_Orders[od].ScheduleStatus,
                     // "wcID": wcID,
-                    "Press": MESM_Orders[od].workcenterID,
+                    "Press": MESM_Orders[od].workcenterID == 0 ? '' : MESM_FloorMaps[MESM_Orders[od].workcenterID].unitName,
                 });
                 // MESM_FloorMaps[f]. MOLD_Machine_Matrix
             }
@@ -1222,6 +1215,37 @@
                                 end: moment.utc(event.end._d).format('MM/DD/YYYY HH:mm:ss')
                             };
                             cc(ScheduleEvents);
+                            for (var i = 0; i < orderTable.dataSet.length; i++) {
+                                if (orderTable.dataSet[i].OrderNumber == event.id) {
+                                    // cc(orderTable.dataSet[i].OrderID);
+                                    // cc(orderTable.dataSet[i].StartDate);
+                                    // cc(orderTable.dataSet[i].StartTime);
+                                    // cc(orderTable.dataSet[i].EndDate);
+                                    // cc(orderTable.dataSet[i].EndTime);
+                                    // cc(orderTable.dataSet[i].WCG);
+                                    // cc(orderTable.dataSet[i].Status);
+                                    // cc(orderTable.dataSet[i].Press);
+                                    // cc('====');
+                                    // cc(ScheduleEvents[event.id].resourceId);
+                                    // cc(ScheduleEvents[event.id].start);
+                                    // cc(ScheduleEvents[event.id].end);
+                                    // cc('//////');
+                                    orderTable.dataSet[i].StartDate = moment.utc(event.start._d).format('MMM DD, YYYY HH:mm:ss');
+                                    orderTable.dataSet[i].EndDate = moment.utc(event.end._d).format('MMM DD, YYYY HH:mm:ss');
+                                    orderTable.dataSet[i].StartTime = moment.utc(event.start._d).format('HH:mm:ss');
+                                    orderTable.dataSet[i].EndTime = moment.utc(event.end._d).format('HH:mm:ss');
+                                    orderTable.dataSet[i].WCG = ScheduleEvents[event.id].resourceId.split('_')[0];
+                                    orderTable.dataSet[i].Press = ScheduleEvents[event.id].resourceId.split('_')[1];
+                                    // cc(orderTable.dataSet[i].StartDate);
+                                    // cc(orderTable.dataSet[i].EndDate);
+                                    // cc(orderTable.dataSet[i].StartTime);
+                                    // cc(orderTable.dataSet[i].EndTime);
+                                    // cc(orderTable.dataSet[i].WCG);
+                                    // cc(orderTable.dataSet[i].Press);
+                                    break;
+                                }
+                            }
+                            orderTable.reload();
                         } else if (ScheduleEvents[event.id].resourceId != event.resourceId ||
                             ScheduleEvents[event.id].start != moment.utc(event.start._d).format('MM/DD/YYYY HH:mm:ss') ||
                             ScheduleEvents[event.id].end != moment.utc(event.end._d).format('MM/DD/YYYY HH:mm:ss')) {
@@ -1249,8 +1273,8 @@
                                     // cc(ScheduleEvents[event.id].start);
                                     // cc(ScheduleEvents[event.id].end);
                                     // cc('//////');
-                                    orderTable.dataSet[i].StartDate = moment.utc(event.start._d).format('MMM DD, YYYY');
-                                    orderTable.dataSet[i].EndDate = moment.utc(event.end._d).format('MMM DD, YYYY');
+                                    orderTable.dataSet[i].StartDate = moment.utc(event.start._d).format('MMM DD, YYYY HH:mm:ss');
+                                    orderTable.dataSet[i].EndDate = moment.utc(event.end._d).format('MMM DD, YYYY HH:mm:ss');
                                     orderTable.dataSet[i].StartTime = moment.utc(event.start._d).format('HH:mm:ss');
                                     orderTable.dataSet[i].EndTime = moment.utc(event.end._d).format('HH:mm:ss');
                                     orderTable.dataSet[i].WCG = ScheduleEvents[event.id].resourceId.split('_')[0];
@@ -1657,6 +1681,11 @@
                     // cc('_During ' + _During);
 
                     var mm = _During, hh = 0;
+
+                    if (mm < 240) {
+                        mm = 240
+                    }
+
                     hh = Math.floor(mm / 60);
                     mm = mm - 60 * hh;
                     if (hh > 24) {
@@ -1788,6 +1817,9 @@
                     // cc('_During ' + _During);
 
                     var mm = _During, hh = 0;
+                    if (mm < 240) {
+                        mm = 240
+                    }
                     hh = Math.floor(mm / 60);
                     mm = mm - 60 * hh;
                     if (hh > 24) {
@@ -2252,7 +2284,10 @@
                                                                         <div class="m-list-timeline__item">
                                                                             <span class="m-list-timeline__badge -m-list-timeline__badge--state-success"></span>
                                                                             <span class="m-list-timeline__text">
-																						12 new users registered
+																						13 new order received
+                                                                                <span class="m-badge m-badge--danger m-badge--wide">
+																							urgent
+																						</span>
 																					</span>
                                                                             <span class="m-list-timeline__time">
 																						Just now
@@ -2485,8 +2520,7 @@
                                     <a href="#" class="m-nav__link m-dropdown__toggle">
 												<span class="m-topbar__userpic">
 													<img src="assets/app/media/img/users/user4.jpg"
-                                                         class="m--img-rounded m--marginless m--img-centered imgLoginUser"
-                                                         alt=""/>
+                                                         class="m--img-rounded m--marginless m--img-centered" alt=""/>
 												</span>
                                         <span class="m-topbar__username m--hide">
 													Nick
@@ -2500,7 +2534,7 @@
                                                 <div class="m-card-user m-card-user--skin-dark">
                                                     <div class="m-card-user__pic">
                                                         <img src="assets/app/media/img/users/user4.jpg"
-                                                             class="m--img-rounded m--marginless imgLoginUser" alt=""/>
+                                                             class="m--img-rounded m--marginless" alt=""/>
                                                     </div>
                                                     <div class="m-card-user__details">
 																<span class="m-card-user__name m--font-weight-500">
@@ -2840,7 +2874,10 @@
                                                     <div class="m-list-timeline__item">
                                                         <span class="m-list-timeline__badge m-list-timeline__badge--success"></span>
                                                         <span class="m-list-timeline__text">
-																	12 new users registered
+																	13 new order received
+                                                            <span class="m-badge m-badge--danger m-badge--wide">
+																		urgent
+																	</span>
 																</span>
                                                         <span class="m-list-timeline__time">
 																	Just now
