--- a/SCHEDULE/SCHEDULE_01172018.html
+++ b/SCHEDULE/SCHEDULE_01172018.html
@@ -1351,7 +1351,7 @@
                         center:
                             'title',
                         right:
-                            'timelineDay,timelineThreeDays,agendaWeek,month'
+                            'timelineDay,timelineThreeDays3D,agendaWeek,month'
                     }
                     ,
 
@@ -1371,7 +1371,7 @@
                     ,
 
                     views: {
-                        timelineThreeDays: {
+                        timelineThreeDays3D: {
                             type: 'timeline',
                             duration:
                                 {
