--- a/fullcalendar-scheduler-1.9.1/demos/themes.html
+++ b/fullcalendar-scheduler-1.9.1/demos/themes.html
@@ -26,7 +26,7 @@
           header: {
             left: 'today prev,next',
             center: 'title',
-            right: 'timelineDay,timelineThreeDays,agendaWeek,month,listWeek'
+            right: 'timelineDay,timelineThreeDays,agendaWeek,month'
           },
           defaultView: 'timelineDay',
           views: {
